Updated Covid Cases Tracker App

--- a/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/auth/login/login.component.scss
+++ b/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/auth/login/login.component.scss
@@ -1,7 +1,9 @@
 /* Structure */
 .example-container {
-    position: relative;
+    position: absolute;
     padding: 5px;
+    height: 100%;
+    width: 100%;
   }
   
   .example-form {
