--- a/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/components/facilities/facilities.component.html
+++ b/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/components/facilities/facilities.component.html
@@ -1,8 +1,15 @@
-<h1 class="display-4">Provided Facilities</h1>
-<mat-tab-group (selectedTabChange)="OnTabChange($event)" animationDuration="3000ms">
-    <mat-tab label="User Registration">
-    </mat-tab>
-    <mat-tab label="Adim Registration">
-    </mat-tab>
-</mat-tab-group>
-<router-outlet></router-outlet>
+<div class="main-panel">
+    <h1 class="button-row">Registration</h1>
+    <div class="button-row">
+        <button type="button" mat-flat-button color="primary" (click)="goToLogin()">Login</button>
+    </div>
+    <mat-tab-group dynamicHeight (selectedTabChange)="OnTabChange($event)" animationDuration="3000ms">
+        <mat-tab label="User Registration">
+        </mat-tab>
+        <mat-tab label="Admin Registration">
+        </mat-tab>
+    </mat-tab-group>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
+</div>
