--- a/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/components/facilities/users/users.component.html
+++ b/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/components/facilities/users/users.component.html
@@ -25,6 +25,15 @@
             </div>
         </div>
         <div class="form-group">
+            <label> Password </label>
+            <input formControlName='password' type="password" class="form-control">
+        </div>
+        <div class="form-group">
+            <label> Confirm Password </label>
+            <input [class.is-invalid]='registrationForm.errors?.missMatch' formControlName='confirmpassword' type="password" class="form-control">
+            <small class="text-danger" *ngIf="registrationForm.errors?.missMatch"> Password miss-Match Error. </small>
+        </div>
+        <div class="form-group">
             <label> Phone </label>
             <input type="tel" class="form-control" #phone='ngModel' name='telephone' required pattern='^\d{10}$'
                 [class.is-invalid]='phone.invalid && phone.touched' [(ngModel)]='userData.telephone'>
