--- a/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/components/layouts/default/default.component.scss
+++ b/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/components/layouts/default/default.component.scss
@@ -4,13 +4,23 @@ height: 100%;
 flex-direction: column;
 }
 mat-sidenav-container{
-height: 100%;
-overflow-y: hidden;
+width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 mat-sidenav{
 width: 20%;
+height: 100%;
+  overflow-y: hidden; 
+  display: flex; 
+  flex-direction: column;
 }
 mat-sidenav-content{
-width: 75%;
 padding: 20px;
 }
+.mat-drawer-inner-container {
+    display: flex;
+    flex-direction: column;
+  }
