--- a/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/components/shared/side-bar/side-bar.component.html
+++ b/corona-virus-tracker/corona-virus-tracker-app-server/corona-virus-tracker-app/src/app/components/shared/side-bar/side-bar.component.html
@@ -8,17 +8,17 @@
     </div>
     <mat-divider></mat-divider>
     <h2 matSubheader>Pages</h2>
-    <a mat-list-item routerLink='/' routerLinkActive='list-item-active'>Dashboard</a>
-    <a mat-list-item routerLink='/home' routerLinkActive='list-item-active'>Current Data</a> 
-    <!-- (click)="goToDataTable()" -->
-    <a mat-list-item routerLink='/articles' routerLinkActive='list-item-active'>Articles</a>
+    <a mat-list-item routerLink='/dashboard' routerLinkActive='active'>Dashboard</a>
+    <a mat-list-item routerLink='/home' routerLinkActive='active'>Current Data</a> 
+<!--     <a mat-list-item routerLink='/articles/1' routerLinkActive='active'>Articles</a>
+ -->    <a mat-list-item (click)="navigate()" routerLinkActive='active'>Articles</a>
     <mat-divider></mat-divider>
     <h2 matSubheader>Tools</h2>
-    <a mat-list-item routerLink='/contacts' routerLinkActive='list-item-active'>
+    <a mat-list-item routerLink='/contacts' routerLinkActive='active'>
         <mat-icon>import_contacts</mat-icon>
         Contacts
     </a>
-    <a mat-list-item routerLink='/contacts' routerLinkActive='list-item-active'>
+    <a mat-list-item routerLink='/contacts' routerLinkActive='active'>
         <mat-icon>contact_phone</mat-icon>
         Leads
     </a>
